style.css
body {
   background-color: rgb(0, 109, 119);
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
}

section.sidebar {
   background-color: rgb(131, 197, 190);
   width: 100%;
   height: 60px;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: flex;
   gap: 20px;
}

li a {
   display: block;
   color: #000;
   padding: 15px 20px;
   text-decoration: none;
   font-weight: bold;
   transition: background-color 0.3s, color 0.3s;
   border-radius: 5px;
}

li a:hover {
   background-color: rgb(226, 149, 120);
   color: #000;
   border-radius: 5px;
}

.active {
   background-color: rgb(255, 221, 210);
   border-radius: 5px;
}

.icon-container {
   display: flex;
   align-items: center;
   gap: 10px;
   position: absolute;
   right: 20px;
}

.fa {
   padding: 10px;
   font-size: 20px;
   width: 18px;
   height: 18px;
   text-align: center;
   text-decoration: none;
   margin: 0;
   border-radius: 50%;
}

.fa:hover {
   opacity: 0.7;
}

.fa-linkedin {
   background: #007bb5;
   color: white;
}

.fa-instagram {
   background: rgb(214, 41, 118);
   color: white;
}

.fa-github {
  background: rgb(64, 120, 192);
  color: white;
}

section.content {
   margin-top: 80px; /* Adjust to ensure the content is not hidden behind the horizontal sidebar */
   padding: 20px;
   background-color: rgb(131, 197, 190);
   border-radius: 5px;
}

.sideBySide {
   display: flex;
   justify-content: space-around; /* Distribute space between and around the flex items */
   padding: 20px;
   background-color: rgb(131, 197, 190);
   border-radius: 5px;
}

.languages, .courses, .skills {
   flex: 1; /* Grow items to fill available space */
   flex-direction: column;
   margin: 0px;
   padding: 0px;
}

img {
   border-radius: 10px;
   width: 20%;
 }

 /* Lightbox */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
.lightbox {
   display: none;
   position: fixed;
   z-index: 10;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.9);
}

/* Lightbox image */
.lightbox-content {
   margin: auto;
   display: block;
   width: auto;
   height: auto;
   max-width: 80%;
}

/* Close button */
.close {
   position: absolute;
   top: 20px;
   right: 35px;
   color: #f1f1f1;
   font-size: 40px;
   font-weight: bold;
   transition: 0.3s;
}

.close:hover,
.close:focus {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
}

/* Animation for the image */
.lightbox-content {
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
   animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
   from {-webkit-transform: scale(0)} 
   to {-webkit-transform: scale(1)}
}

@keyframes zoom {
   from {transform: scale(0)} 
   to {transform: scale(1)}
}

